--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
     "superagent": "~0.18.2",
-    "remotestorage": "~0.10.2"
+    "remotestorage": "~0.10.2",
+    "FileSaver": "*",
+    "Blob": "*"
   },
   "homepage": "https://github.com/elf-pavlik/plp-generator",
   "ignore": [
