--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "remotestorage": "~0.10.2",
     "FileSaver": "*",
     "Blob": "*",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "lodash": "~2.4.1"
   },
   "homepage": "https://github.com/elf-pavlik/plp-generator",
   "ignore": [
