Now profile schemas are composed using references @type is defined in the schema itself (no need to add from editor's logic)

--- a/schemas/Project.json
+++ b/schemas/Project.json
@@ -1,86 +1,5 @@
 {
   "schema" : {
-    "title": "Project",
-    "type": "object",
-    "properties": {
-      "name": { "type": "string" , "title": "Name"},
-      "description": { "type": "string", "title": "About"},
-      "url":  { "type" : "string", "title": "Homepage"},
-      "image": { "type": "string" , "title": "Image URL"},
-      "version": { "type": "string" , "title": "Version"},
-      "license": { "type": "string" , "title": "License URL"},
-      "copyrightHolder": {
-        "type": "object",
-        "title": "Copyright Holder",
-        "properties": {
-          "name": { "type": "string" , "title": "Name"},
-          "url": { "type": "string" , "title": "Homepage"}
-        }
-      },
-      "contributor": {
-        "type": "array",
-        "uniqueItems": true,
-        "title": "Contributors",
-        "items": {
-          "type": "object",
-          "title": "Contributor",
-          "properties": {
-            "name": { "type": "string", "title": "Name"},
-            "website": { "type": "string", "title": "Homepage"}
-          }
-        }
-      },
-      "discussionUrl": {
-        "type": "array",
-        "uniqueItems": true,
-        "title": "Links",
-        "items": {
-          "type": "object",
-          "title": "Link",
-          "properties": {
-            "url": { "type": "string", "title": "URL" }
-          }
-        }
-      },
-      "isPartOf": {
-        "type": "array",
-        "uniqueItems": true,
-        "title": "Part of other projects",
-        "items": {
-          "type": "object",
-          "title": "Project",
-          "properties": {
-            "name": { "type" : "string", "title": "Project name"},
-            "url":  { "type" : "string", "title": "URL"}
-          }
-        }
-      },
-      "workExample": {
-        "type": "array",
-        "uniqueItems": true,
-        "title": "See also",
-        "items": {
-          "type": "object",
-          "title": "Reference",
-          "properties": {
-            "name": { "type" : "string", "title": "Reference name"},
-            "url":  { "type" : "string", "title": "URL"}
-          }
-        }
-      },
-      "workPerformed": {
-        "type": "array",
-        "uniqueItems": true,
-        "title": "Events the project participated in",
-        "items": {
-          "type": "object",
-          "title": "Event",
-          "properties": {
-            "name": { "type" : "string", "title": "Event name"},
-            "url":  { "type" : "string", "title": "URL"}
-          }
-        }
-      }
-    }
+    "$ref": "schemas/basic_project.json"
   }
 }
